# backend/app/Http/Controllers/Controller.php
@@ -9,27 +9,15 @@ use Illuminate\Routing\Controller as BaseController;
 /**
  * @OA\Info(
  *     version="1.0.0",
- *     title="Laravel Products API Documentation",
- *     description="API documentation for Products API",
- *     @OA\Contact(
- *         email="admin@example.com"
- *     ),
- *     @OA\License(
- *         name="Apache 2.0",
- *         url="http://www.apache.org/licenses/LICENSE-2.0.html"
- *     )
- * )
- * 
- * @OA\Server(
- *     description="Local API Server",
- *     url="http://127.0.0.1:8000"
+ *     title="API de Productos",
+ *     description="API para gestionar productos"
  * )
  * 
  * @OA\SecurityScheme(
  *     type="http",
  *     scheme="bearer",
  *     bearerFormat="JWT",
- *     securityScheme="sanctum"
+ *     securityScheme="bearerAuth"
  * )
  */
 class Controller extends BaseController
